# token-scope

./: .dockerignore  .gitignore  Dockerfile  README.md  build_package.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
api/: .gitignore  main.py  models.py  routes.py
core/: calculator.py  leak_detector.py  parser.py  payload_optimizer.py  tokenizer.py
sdk/: __init__.py  client.py  reporter.py
src/tokenscope/: __init__.py  client.py  prices.json  reporter.py
src/tokenscope/core/: calculator.py  leak_detector.py  parser.py  payload_optimizer.py  tokenizer.py
