[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-tokenscope"
version = "0.2.2"
description = "Profile your LLM payloads. Find the waste. Cut the cost."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["llm", "openai", "tokens", "cost", "optimization", "profiling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "tiktoken>=0.6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]

[project.urls]
Homepage = "https://github.com/DevelopedBy-Siva/token-scope"
"Bug Tracker" = "https://github.com/DevelopedBy-Siva/token-scope/issues"
"Live API" = "https://token-scope.onrender.com"

[tool.setuptools]
package-dir = {"" = "dist_pkg"}

[tool.setuptools.packages.find]
where = ["dist_pkg"]
include = ["tokenscope*"]