[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-tokenscope"
version = "1.0.0"
description = "Profile your LLM payloads. Find the waste. Cut the cost."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "tiktoken>=0.6.0",
]



[project.urls]
Homepage = "https://github.com/DevelopedBy-Siva/token-scope"
Issues   = "https://github.com/DevelopedBy-Siva/token-scope/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tokenscope = ["prices.json"]